--- a/Omer.html
+++ b/Omer.html
@@ -58,13 +58,12 @@
               class="social-icon facebook"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a href="#" class="social-icon google"
-              ><i class="fab fa-google"></i
-            ></a>
-            <a href="#" class="social-icon github"
+            <a href="https://github.com/OmerKH" class="social-icon github"
               ><i class="fab fa-github"></i
             ></a>
-            <a href="#" class="social-icon linkedin"
+            <a
+              href="https://www.linkedin.com/in/omer-kirshner-a59472109/"
+              class="social-icon linkedin"
               ><i class="fab fa-linkedin"></i
             ></a>
           </footer>
